# LikeLion13th_FE_TestServer

./: .gitignore  README.md  pyproject.toml
accounts/: models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
config/: settings.py
